--- a/assets/style.css
+++ b/assets/style.css
@@ -67,10 +67,11 @@ body {
     border-radius: 10px;
     padding: 20px;
     max-width: 50%;
-    margin: 40px;
+    margin: 40px; */
 
     
 }
+
 
 .gitHub {
     position: absolute;
@@ -82,7 +83,6 @@ body {
     padding: 20px;
     max-width: 50%;
 
-   
 }
 
 .time-block {
