--- a/assets/style.css
+++ b/assets/style.css
@@ -29,17 +29,21 @@ body {
     
     .scheduleContainer {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(4, auto);
         gap: 10px; 
         margin: 20px;
-        margin-top: 5%;
+        margin-top: 6%;
         padding: 10px;
         border-radius: 10px;
         background-image: linear-gradient(to bottom right, rgb(167, 135, 99, .8) , rgb(23, 94, 55, .5));
         max-width: 100%;
         border: 1px solid #ccc;
     
+    }
+
+    .description {
+        width: 95%;
     }
     
     
@@ -64,30 +68,44 @@ body {
     }
     
     .weatherBox {
-        
+        display: flex;
+        justify-content: space-between; /* Space out the child elements */
+        align-items: start;
         border-radius: 10px;
         border: 1px solid #ccc;
-        max-width: 40%;
+        max-width: 100%;
+        /* height: 180px; */
         margin: 10px 0 40px ; 
-        padding: 20px;
+        padding: 15px;
         background-image: linear-gradient(to bottom right, rgb(167, 135, 99, .8) , rgb(23, 94, 55, .7));
     
     }
 
-    .rightWeather {
+    .leftWeather, .rightWeather, .middleRight {
         font-size: 20px;
+        flex: 1; /* Each child takes equal space */
+        margin: 10px;
     }
+
+ 
 
      
     
     .gitHub {
+        
         border-radius: 10px;
         border: 1px solid #ccc;
-        margin: 10px 0; 
+        margin: 30px 20px; 
         padding: 20px;
         max-width: 100%;
         background-image: linear-gradient(to bottom right, rgb(167, 135, 99, .8) , rgb(23, 94, 55, .5));
     
+    }
+
+    .githubIcon {
+        width: 30px;
+        height: auto;
+        border-radius: 7px;
     }
     
     .videoInput {
@@ -96,12 +114,11 @@ body {
     }
     
     .youtubeContainer {
-        width: 133%;
+        width: 87%;
         background-image: linear-gradient(to bottom right, rgb(167, 135, 99, .8) , rgb(23, 94, 55, .5));
         padding: 20px;
         border-radius: 10px;
         border: 1px solid #ccc;
-        width: 557px;
         line-height: 10px;
     
     
