--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-  /* background-image: url(./Images/SunnyDayClip.gif) ; */
+  font-family: 'Open Sans', 'sans-serif';
   background-size: cover;
   min-height: 100vh;
   background-position: center;
@@ -97,7 +97,7 @@ body {
 .gitHub {
   border-radius: 10px;
   border: 1px solid #ccc;
-  margin: 30px 20px;
+  margin: 30px 0px;
   padding: 20px;
   max-width: 100%;
   background-image: linear-gradient(
@@ -111,6 +111,14 @@ body {
   width: 30px;
   height: auto;
   border-radius: 7px;
+}
+
+.gitRepoCss {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 10px;
+    background-color: rgb(233, 233, 209, .5);
+    height: 100px;
 }
 
 .videoInput {
