--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,12 @@ body {
   border: 1px solid #ccc;
 }
 
+.scheduleHeader {
+    display: flex;
+    justify-content: end;
+    
+}
+
 .description {
   width: 95%;
 }
